feat: Add badge verify gen
