# backend/api/spec/static/api/openapi/platform/v1alpha1/openapi.yaml
@@ -195,7 +195,7 @@ paths:
         post:
             tags:
                 - BadgeService
-            description: Create a new App.
+            description: Create a new Badge.
             operationId: BadgeService_IssueBadge
             parameters:
                 - name: appId
@@ -359,6 +359,28 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/TokenResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1alpha1/badges/verify:
+        post:
+            tags:
+                - BadgeService
+            description: Verify a badge.
+            operationId: BadgeService_VerifyBadge
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Badge'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
                 default:
                     description: Default error response
                     content:
@@ -879,9 +901,13 @@ components:
                     type: string
                     description: App Id.
                 a2a:
-                    $ref: '#/components/schemas/IssueA2ABadgeRequest'
+                    allOf:
+                        - $ref: '#/components/schemas/IssueA2ABadgeRequest'
+                    description: The A2A badge.
                 mcp:
-                    $ref: '#/components/schemas/IssueMcpBadgeRequest'
+                    allOf:
+                        - $ref: '#/components/schemas/IssueMcpBadgeRequest'
+                    description: The MCP badge.
         IssueMcpBadgeRequest:
             type: object
             properties:
